# topvisor-bot

./: .env.test  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 2024-06-03_init_tables.py  2024-06-22_users_table.py  2024-06-23_tasks_tables.py  2024-06-25_init_tables.py  2024-06-27_init_tables.py
docker/: Dockerfile  Makefile  docker-compose-local.yml  docker-compose.yml  entrypoint.sh
requirements/: base.txt  local.txt  prod.txt
scripts/postgres/: backup
src/: __init__.py  app.py  bot.py  config.py  constants.py  lifespan.py  main.py  middlewares.py
src/clean/entrypoints/: router.py
src/core/: exceptions.py  utils.py
src/database/: connection.py
src/help/: constants.py
src/help/entrypoints/: router.py  templates.py
src/logging_system/: config.py
src/tasks/: CREATE_TASKS_EXAMPLE_FILE.yaml  constants.py  exceptions.py
src/tasks/adapters/: orm.py  repositories.py
src/tasks/domain/: models.py
src/tasks/entrypoints/: callback_data.py  dependencies.py  markups.py  router.py  schemas.py  templates.py  utils.py  views.py
src/tasks/interfaces/: __init__.py  repositories.py  units_of_work.py
src/tasks/service_layer/: service.py  units_of_work.py
src/users/: constants.py  exceptions.py
src/users/adapters/: orm.py  repositories.py
src/users/domain/: models.py
src/users/entrypoints/: dependencies.py  router.py  views.py  (+1 more)
tests/: config.py  conftest.py  utils.py
tests/core/: fake_objects.py
tests/tasks/: fake_objects.py  utils.py
tests/users/: fake_objects.py  utils.py
(+17 files in other folders)
