[project]
name = 'Topvisor bot'

[tool.mypy]
plugins = ['pydantic.mypy']
disallow_any_generics = false
check_untyped_defs = true
warn_return_any = false
ignore_missing_imports = false
disable_error_code = ['empty-body', 'method-assign']
exclude = ['database_data/', 'database_backups/', 'alembic/']

[tool.pytest.ini_options]
testpaths = [
    'tests',
]
