[project]
name = 'Topvisor bot'

[tool.mypy]
plugins = ['pydantic.mypy']
disallow_any_generics = false
check_untyped_defs = true
warn_return_any = false
ignore_missing_imports = false
disable_error_code = ['empty-body', 'method-assign']
exclude = ['database_data/', 'database_backups/', 'alembic/']

# Avoiding incorrect 'override' error:
[[tool.mypy.overrides]]
module = [
    "src.users.interfaces.repositories",
    "src.users.adapters.repositories",
    "tests.users.fake_objects",
    "src.tasks.interfaces.repositories",
    "src.tasks.adapters.repositories",
    "tests.tasks.fake_objects",
]
disable_error_code = ["override"]

[tool.pytest.ini_options]
testpaths = [
    'tests',
]
